--- a/analytics-samples/analytics-sample/src/main/AndroidManifest.xml
+++ b/analytics-samples/analytics-sample/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+    <!-- Allows audio recording -->
+  <uses-permission android:name="android.permission.RECORD_AUDIO" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
